correct spacing between header and hero, moved hero sass code into it's own partial

--- a/_sass/boot.scss
+++ b/_sass/boot.scss
@@ -8,13 +8,4 @@ body {
 }
 
 @import "_header";
-
-.container .jumbotron {
-  padding: 19px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 22px;
-  color: #FFF;
-  background-image: linear-gradient(to right, #1EBF92 0%, #3797D8 100%);
-  border-radius: 0;
-}
+@import "_hero";
